# aoc2021

./: .bazelrc  .gitignore  Cargo.toml  README.md  WORKSPACE  timing.zsh
.github/workflows/: bazel.yml  github-actions-demo.yml  rust-build-and-test.yml
common/: Cargo.toml
common/src/: lib.rs
cpp/: BUILD  p1.cpp  p22.cpp  p23.cpp
d1/: Cargo.toml
d1/src/: main.rs
d10/: Cargo.toml
d10/src/: main.rs
d11/: Cargo.toml
d11/src/: main.rs
d12/: Cargo.toml
d12/src/: main.rs
d13/: Cargo.toml
d13/src/: main.rs
d14/: Cargo.toml
d14/src/: main.rs
d15/: Cargo.toml
d15/src/: main.rs
d16/: Cargo.toml
d16/src/: main.rs
d17/: Cargo.toml
d17/src/: main.rs
d18/: Cargo.toml
d18/src/: main.rs
d19/: Cargo.toml
d19/src/: main.rs
d19v2/: Cargo.toml
d19v2/src/: main.rs
d2/: Cargo.toml
d2/src/: main.rs
d20/: Cargo.toml
d20/src/: main.rs
d21/: Cargo.toml
d21/src/: main.rs
d22/: Cargo.toml
d22/src/: main.rs
d23/: Cargo.toml
d23/src/: main.rs
d24/: Cargo.toml
d24/src/: main.rs
d25/: Cargo.toml
d25/src/: main.rs
d25v/: Cargo.toml
d25v/src/: main.rs
d3/: Cargo.toml
d3/src/: main.rs
d4/: Cargo.toml
d4/src/: main.rs
d5/: Cargo.toml
d5/src/: main.rs
d6/: Cargo.toml
d6/src/: main.rs
d7/: Cargo.toml
d7/src/: main.rs
d8/: Cargo.toml
d8/src/: main.rs
d9/: Cargo.toml
d9/src/: main.rs
data/: BUILD
vec2d/: Cargo.toml
vec2d/benches/: my_benchmark.rs
vec2d/src/: lib.rs
