[package]
name = "d19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
text_io = "0.1.9"
ndarray = "0.15.4"
# ndarray = { version = "0.15.0", features = ["blas"] }
# blas-src = { version = "0.8", features = ["accelerate"] }

lazy_static = "1.4.0"
rustc-hash = "1.1.0"