[package]
name = "d19v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
text_io = "0.1.9"
ndarray = "0.15.4"
ndarray-linalg = { version = "0.14.1", features = ["openblas"] }
# MacOs
# blas-src = { version = "0.8", features = ["accelerate"] }
# Linux
blas-src = { version = "0.8", features = ["openblas"] }
clap = "2.34.0"
